# TTS

./: package-lock.json  pyproject.toml  requirements.txt  run_enhanced_tts_webui.py  run_final_working_webui.py  run_fixed_tts_webui.py  run_full_tts_webui.py  run_simple_webui.py  run_simple_working_webui.py  setup.py  streamlit_app.py  streamlit_app_simple.py  streamlit_fish_speech.py  streamlit_minimal.py
webui/: index.html  package-lock.json  package.json
webui/src/: App.tsx  index.css
