[project]
name = "streamlit_app"
version = "1.0.0"
description = "Fish Audio TTS Streamlit App"
dependencies = []

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
packages = []
py-modules = []

[tool.uv]
package = false
